docs: Ensure the heading is visible when scrolling to it via a link relative to the fixed title.

--- a/docs/css/default.css
+++ b/docs/css/default.css
@@ -71,13 +71,19 @@ nav.banner div.right {
   padding: 15px 0;
 }
 
+*[id]:before {
+  display: block;
+  content: " ";
+  margin-top: -65px;
+  height: 65px;
+  visibility: hidden;
+}
+
 p { margin-bottom: 15px; }
 p:last-child { margin-bottom: 0; }
 li p:last-child { margin-bottom: 15px; }
 
-p, h1, h2, h3, h4, h5, h6 {
-  margin-top: 0;
-}
+p, h1, h2, h3, h4, h5, h6 { margin-top: 0; }
 h1 { font-size: 48px; margin: 50px 0 30px 0; text-align: center; clear: both; }
 h2 { font-size: 36px; margin: 30px 0 20px 0; clear: both; border-bottom: 2px solid #eeeeee; padding-bottom: 4px; }
 h3, h4, h5, h6 { font-size: 18px; margin-bottom: 15px; clear: both; }
